docs(review): 同步编译插桩介绍